--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <title>FilmeJá</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-960025532"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'AW-960025532');
+    </script>
 </head>
 
 <body>
